--- a/index.html
+++ b/index.html
@@ -25,13 +25,9 @@
         <b>Insert a description of your sonic interaction design here! </b>
         <br />
         <br />
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut adipisci,
-        non quasi vel vero odit debitis recusandae impedit laborum id tempora!
-        Enim accusantium a voluptatum nisi ea placeat? Accusamus, perferendis?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-        accusantium suscipit eaque similique odit deserunt iure est unde libero
-        pariatur doloribus voluptatibus voluptatum cupiditate error, dolorem
-        eius eos. Provident, ullam.
+        Number 1: Action - Turn phone upside down. Sound - Bubble.
+        Number 2: Action - Shake. Sound - Bells.
+        Number 3: Action - Moving. Sound - Brass.
       </p>
     </div>
 
